fix the discovery helper

--- a/custom_components/sendspin_browser/frontend/player.html
+++ b/custom_components/sendspin_browser/frontend/player.html
@@ -27,7 +27,7 @@
           </div>
           <div id="servers-list" class="servers-list hidden"></div>
           <p id="connect-error" class="error-msg hidden" role="alert"></p>
-          <p id="discovery-hint" class="hint hidden">Discovery requires a helper on your network. You can enter the server URL from Integration options (e.g. Music Assistant).</p>
+          <p id="discovery-hint" class="hint hidden">No Sendspin servers found. You can enter the server URL manually or in Integration options (e.g. Music Assistant).</p>
           <button id="connect-btn" class="btn btn-primary btn-connect">Connect</button>
         </div>
       </section>
