--- a/custom_components/sendspin_browser/frontend/player.html
+++ b/custom_components/sendspin_browser/frontend/player.html
@@ -13,56 +13,34 @@
     <div class="app">
       <header class="header">
         <h1 class="logo">Sendspin</h1>
-        <span class="tagline">Browser Player</span>
+        <span class="tagline">Register player</span>
       </header>
 
       <section id="connect-card" class="panel connect-panel">
         <div class="connect-content">
+          <p class="connect-intro">Register this browser tab as a Sendspin player. Use a name and server (e.g. Music Assistant on port 8927), then connect. Control playback from Music Assistant or another controller.</p>
           <label for="player-name" class="connect-label">Player name</label>
           <input type="text" id="player-name" class="connect-input" placeholder="e.g. Living Room Dashboard" autocomplete="off" />
-          <label for="server-url" class="connect-label">Server</label>
+          <label for="server-url" class="connect-label">Server URL</label>
           <div class="connect-row">
-            <input type="text" id="server-url" class="connect-input" placeholder="http://homeassistant.local:8095" autocomplete="url" />
-            <button id="find-servers-btn" class="btn btn-ghost" type="button" title="Find servers on network">Find servers</button>
+            <input type="text" id="server-url" class="connect-input" placeholder="http://homeassistant.local:8927" autocomplete="url" />
+            <button id="find-servers-btn" class="btn btn-ghost" type="button" title="Find servers on network">Find</button>
           </div>
           <div id="servers-list" class="servers-list hidden"></div>
           <p id="connect-error" class="error-msg hidden" role="alert"></p>
-          <p id="discovery-hint" class="hint hidden">No Sendspin servers found. You can enter the server URL manually or in Integration options (e.g. Music Assistant).</p>
-          <button id="connect-btn" class="btn btn-primary btn-connect">Connect</button>
+          <p id="discovery-hint" class="hint hidden">No Sendspin servers found. Enter the server URL manually or set it in Integration options.</p>
+          <button id="connect-btn" class="btn btn-primary btn-connect">Register & connect</button>
         </div>
       </section>
 
-      <section id="player-card" class="panel player-panel hidden">
-        <div class="player-content">
-          <div class="now-playing">
-            <div class="now-playing-artwork" aria-hidden="true"></div>
-            <div class="now-playing-info">
-              <div id="now-playing-title" class="now-playing-title">—</div>
-              <div id="now-playing-artist" class="now-playing-artist">—</div>
-            </div>
-          </div>
-          <div class="timeline">
-            <input type="range" id="progress-range" class="progress-range" min="0" max="1000" value="0" step="1" aria-label="Playback position" />
-            <div class="timeline-labels">
-              <span id="time-current" class="time-label">0:00</span>
-              <span id="time-total" class="time-label">0:00</span>
-            </div>
-          </div>
-          <div class="transport">
-            <button id="btn-prev" class="btn btn-transport" title="Previous" aria-label="Previous track"><svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M6 6h2v12H6zm3.5 6l8.5 6V6z"/></svg></button>
-            <button id="btn-play-pause" class="btn btn-transport btn-play-pause" title="Play" aria-label="Play"><svg class="icon icon-play" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M8 5v14l11-7z"/></svg><svg class="icon icon-pause hidden" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg></button>
-            <button id="btn-next" class="btn btn-transport" title="Next" aria-label="Next track"><svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"/></svg></button>
-          </div>
-          <div class="secondary-controls">
-            <div class="volume-row">
-              <button id="mute-btn" class="btn btn-icon" title="Mute" aria-label="Toggle mute"><svg id="icon-volume" class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg><svg id="icon-muted" class="icon hidden" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"/></svg></button>
-              <input type="range" id="volume-slider" class="volume-slider" min="0" max="100" value="80" aria-label="Volume" />
-            </div>
-            <div class="player-meta">
-              <span id="sync-status" class="sync-badge">—</span>
-              <button id="disconnect-btn" class="btn btn-text">Disconnect</button>
-            </div>
-          </div>
+      <section id="registered-card" class="panel registered-panel hidden">
+        <div class="registered-content">
+          <div class="registered-badge" aria-hidden="true"></div>
+          <p class="registered-title">Registered as player</p>
+          <p class="registered-name" id="registered-name">—</p>
+          <p class="registered-server" id="registered-server">—</p>
+          <p class="registered-hint">Control playback from Music Assistant or another controller. This tab stays connected as a player.</p>
+          <button id="disconnect-btn" class="btn btn-text">Disconnect</button>
         </div>
       </section>
 
