change ui for player dashboard

--- a/custom_components/sendspin_browser/frontend/player.html
+++ b/custom_components/sendspin_browser/frontend/player.html
@@ -44,6 +44,13 @@
         </div>
       </section>
 
+      <section id="active-players-card" class="panel active-players-panel hidden">
+        <h2 class="active-players-title">Other Connected Dashboards</h2>
+        <div id="active-players-list" class="active-players-list">
+          <!-- Populated by JS -->
+        </div>
+      </section>
+
       <footer class="footer">
         <a href="https://www.sendspin-audio.com" target="_blank" rel="noopener">Sendspin</a>
         <span class="dot">·</span>
