added music assitant token

--- a/custom_components/sendspin_browser/frontend/player.html
+++ b/custom_components/sendspin_browser/frontend/player.html
@@ -46,6 +46,15 @@
         <p id="connect-error" class="error-msg hidden" role="alert"></p>
       </div>
     </div>
+  </div>
+
+  <!-- ── Registered Players ── -->
+  <div class="section-card">
+    <h2 class="section-title">Registered Players</h2>
+    <div id="players-list" class="players-list">
+      <div class="players-empty">No registered players yet.</div>
+    </div>
+  </div>
 
   </div>
 
