add active players section

--- a/custom_components/sendspin_browser/frontend/player.html
+++ b/custom_components/sendspin_browser/frontend/player.html
@@ -50,9 +50,9 @@
 
   <!-- ── Registered Players ── -->
   <div class="section-card">
-    <h2 class="section-title">Registered Players</h2>
+    <h2 class="section-title">Active Players</h2>
     <div id="players-list" class="players-list">
-      <div class="players-empty">No registered players yet.</div>
+      <div class="players-empty">No active players.</div>
     </div>
   </div>
 
